--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </ul>
           </li>
           <li>
-            <a href="https://www.youtube.com/" class="https">link4</a>
+            <a href="https://www.youtube.com/">link4</a>
           </li>
           <li>
-            <a href="https://validator.w3.org/" class="https">link5</a>
+            <a href="https://validator.w3.org/">link5</a>
           </li>
           <li>
             <a href="#">link6</a>
